@@ -2,6 +2,7 @@ Revision history for Perl application Lstu
 
 0.21-0 2018-??-??
 	- Allow to delete URLs and ban IPs from safebrowsingcheck
+	- Add ban CLI tool for banning and unbanning IP addresses
 
 0.20-2 2018-10-07
 	- Handle very long URLs
